--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.10",
+    "mongojs": "^2.6.0",
     "morgan": "~1.9.0",
+    "promised-mongo": "^1.2.0",
     "pug": "2.0.0-beta11"
   }
 }
