--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.10",
     "morgan": "~1.9.0",
+    "nodemailer": "^5.1.1",
     "pug": "2.0.0-beta11"
   },
   "devDependencies": {
