--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
+    "graphql-yoga": "^1.17.4",
     "http-errors": "~1.6.2",
     "mongodb": "^3.1.10",
     "morgan": "~1.9.0",
